// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should accept "style" prop 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: -1rem;
  margin-right: -1rem;
  height: 100%;
  color: red;
}

@media (max-width:1280px) {
  .emotion-0 {
    margin-left: -0.5rem;
    margin-right: -0.5rem;
  }
}

<div>
  <div
    class="emotion-0"
  >
    Content
  </div>
</div>
`;

exports[`should accept flex container props 1`] = `
.emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column-reverse;
  -ms-flex-direction: column-reverse;
  flex-direction: column-reverse;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
  margin-left: -1rem;
  margin-right: -1rem;
  height: 100%;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

@media (max-width:1280px) {
  .emotion-0 {
    margin-left: -0.5rem;
    margin-right: -0.5rem;
  }
}

<div>
  <div
    class="emotion-0"
  >
    Content
  </div>
</div>
`;

exports[`should render correctly 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: -1rem;
  margin-right: -1rem;
  height: 100%;
}

@media (max-width:1280px) {
  .emotion-0 {
    margin-left: -0.5rem;
    margin-right: -0.5rem;
  }
}

<div>
  <div
    class="emotion-0"
  >
    Content
  </div>
</div>
`;
